<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">COASAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="application_key">370beed4e16eca76aa1ff2e4a2521b4cf</string>
    <string name="default_server_url">https://apps.applozic.com</string>
    <string name="default_mqtt_server_url">tcp://apps.applozic.com:1883</string>
    <string name="default_media_location_folder">Applozic</string>
    <string name="take_order_userid">ApplozicShop</string>
    <string name="time">Time</string>
    <string name="customer_name">Customer Name</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="invite_message">Hey, check out Applozic -
        Plug &amp; Play Messaging: http://www.applozic.com</string>
    <string name="facebook_app_id">2194468880571702</string>
    <string name="Qty">Qty</string>
    <string name="log_out_successful">Log out successful</string>
    <string name="forgot_password">CAN\'T SIGN IN?</string>
    <string name="email">Email</string>
    <string name="phone_length">10</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="phone">Phone Number</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string-array name="condition">
        <item>Select Condition</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="condition2">
        <item>Any</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string name="adults">Adults</string>
    <string name="children">Children\n(Age 2 to 12)</string>
    <string name="infants">Infants\n(Under 2 years)</string>
    <string-array name="Sorting">
        <item>Latest</item>
        <item>High</item>
        <item>Low</item>
    </string-array>
    <string-array name="Children">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="bargain_to_drive">Bargain to Driver</string>
    <string-array name="Adults2">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="Seats">


        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="Bed">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="BathType">
        <item>Private</item>
        <item>Shared</item>
    </string-array>
    <string-array name="VehType">
        <item>Select</item>
        <item>Van/SUV</item>
        <item>Cars</item>
        <item>Pickup Truck</item>
        <item>Box Truck</item>
    </string-array>
    <string-array name="VehBrand">
        <item>Select</item>
        <item>Toyota</item>
        <item>Suzuki</item>
        <item>Honda</item>
    </string-array>
    <string-array name="VehModel">
        <item>Select</item>
        <item>Corolla</item>
        <item>Swift</item>
        <item>Jazz</item>
    </string-array>
    <string-array name="appCat">
        <item>Select</item>
        <item>Renting</item>
        <item>Shopping</item>
        <item>Bargain</item>
    </string-array>
    <string-array name="appOrder">
        <item>Select</item>
        <item>S000001</item>
        <item>S000002</item>
        <item>S000003</item>
    </string-array>
    <string name="u_i_agree_to_the_terms_and_conditions_u">By proceeding to the next step, I agree to the </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_have_non_expired_driver_s_license">Do you have non expired driver\'s license</string>
    <string name="are_you_willing_to_lift_and_carry_atleast_50_lbs_up_a_flight_or_stairs">Are you willing to lift and carry atleast 50 lbs up a flight or stairs?</string>
    <string name="have_you_been_convicted_of_a_felony_in_the_past_7_years">Have you been convicted of a felony in the past 7 years?</string>
    <string name="government_id">Government ID</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="deactivate_your_account">Deactivate Your Account</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="clear_house_rules_you_want_your_visitors_to_nfollow">House Rules You want your visitors to follow</string>
    <string name="apt_suit_if_any">Apt/Suit (if any)</string>
    <string name="driver_first_name">Driver First Name</string>
    <string name="driver_last_name">Driver Last Name</string>
    <string name="in_the_past_7_years_have_you_ever_been_charged_with_dwi">In the past 7 years have you ever been charged with DWI?</string>
    <string name="i_also_agree_not_to_share_my_personal_phone">I also, agree NOT to share my personal phone number, email address and or any other form of communication to any user in COASAPP. Doing so, may result in suspension of my account and or being remove from the COASAPP platform</string>
    <string name="driver_middle_name">Driver Middle Name</string>
    <string name="terms"><html><body>By Proceeding to the next step, I agree to the <a href='file:///android_asset/regulation.htm'></a>. I also, agree NOT to share my personal phone number, email address and or any other term of communication to any user in COASAPP. Doing so, may result in suspension of my account or being removed from the COASAPP platform. As a seller you are responsible to pay taxes to your city/state’s proper authorities. Platform fee is 6% (of listing price) you MUST pay in order for your item(s) to appear in shopping center and after our approval.</body></html></string>
    <string name="i_agree_reg"><![CDATA[I Agree on Terms & Conditions]]></string>
    <string name="cancel">Cancel</string>
    <string name="terms_link">By Proceeding to the next step, I agree to the User Terms and Conditions. I also, agree NOT to share my personal phone number, email address and or any other form of communication to any user in COASAPP. Doing so, may result in suspension of my account or being removed from the COASAPP platform.
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_connection_not_available">No internet connection</string>
    <string name="you_need_network_access_for_delete">You need to have network access for deleting Conversation </string>
    <string name="applozic_server_error">Oops! You caught an error, try again later</string>
    <string name="you_need_network_access_for_block_or_unblock">You need to have network access for block/unblock a user</string>
    <string name="internet_connection_for_group_name_info">Your phone needs an Internet connection to change the group name</string>
    <string name="you_dont_have_any_network_access_info">You don\'t have any network access now</string>
    <string name="failed_to_leave_group">Failed to leave group</string>
    <string name="user_is_already_exists">User already exists in group</string>
    <string name="delete_conversation_failed">Delete failed</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Create a new contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="search_hint">Search...</string>
    <string name="phone_number_not_present">Phone number is not present</string>
    <string name="zero_friends_on_phone">No matching contact found on phone contacts but you can still send message by entering the email, userId or phone number</string>
    <string name="delete_thread_text">Deleting....</string>
    <string name="search_title">Search</string>
    <string name="applozic_user_already_in_a_group">Already added to the [groupType]</string>
    <string name="applozic_contacts_loading_info">Loading please wait...</string>
    <string name="applozic_contacts_loading_error">You need to have network access for loading contacts</string>
    <string name="applozic_enter_group_name">Please enter a group name to proceed..</string>
    <string name="snap_text">Oh Snap!</string>
    <string name="account_disconnection_message">We’re sorry but messaging is not \navailable at the moment.\nPlease contact support for more details</string>
    <string name="powered_by_applozic_message">We are powered by Applozic</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="title_renting">Renting</string>
    <string name="title_messenger">Chats</string>
    <string name="title_shopping">Buy &amp; Sell</string>
    <string name="book">Book</string>
    <string name="desc">
        <li>Item one</li>
        \n<li>Item two</li>
        \n<li>Item three</li>
    </string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="pay">Pay</string>
    <string name="submit">Save</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="zip_code">Zip Code</string>
    <string name="price_per_day">Price per day</string>
    <string name="set_default_image">Set Default Image</string>
    <string name="tags">Tags</string>
    <string-array name="houseType">
        <item>Select Room Type</item>
        <item>Room</item>
        <item>House</item>
    </string-array>
    <string-array name="shareType">
        <item>Select what will guests have</item>
        <item>Entire House/Room</item>
        <item>Shared Room</item>
        <item>Private Room</item>
    </string-array>
    <string-array name="bookType">
        <item>Select Booking Option</item>
        <item>Hourly</item>
        <item>Nightly</item>
    </string-array>
    <string-array name="bookType2">
        <item>Any</item>
        <item>Hourly</item>
        <item>Nightly</item>
    </string-array>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="invite">Invite your friends</string>
    <string name="contact_permission">Contact permission are needed to access</string>
    <string name="storage_permission">Storage permission are needed to access</string>
    <string name="location_permission">Location permission are needed to access</string>
    <string name="phone_call_permission">Phone call permission are needed to access</string>
    <string name="phone_camera_permission">Camera permission are needed to access</string>
    <string name="record_audio">Audio recording permission needed</string>
    <string name="camera_audio_permission">Camera and record audio permission are needed to access</string>
    <string name="contact_permission_not_granted">Permission were not granted for Contact</string>
</resources>